Addressing cramped answerButtons, answerbutton widths-responsive to work on most devices, corrected syntax errors on one answer button

--- a/style.css
+++ b/style.css
@@ -45,11 +45,13 @@
     border-width: 1.75px;
     border-radius: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    justify-content: left;
     
 }
 
 button {
-    border-style: double;
+    border-style: solid;
+    border-width: 1.5px;
     border-radius: 3px;
     border-color: red;
     display: flex;
@@ -57,6 +59,8 @@ button {
     flex-wrap: wrap;
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 3px;
+    margin: 3px;
 }
 
 #highScoresPage {
@@ -70,3 +74,7 @@ button {
     justify-content: center;
 }
 
+.answerButtons {
+    display: flex;
+    width: 52%;
+}
